Small updates, and a shift to org.heaputils