@@ -1,5 +1,5 @@
 /**
- * HeapFragger.java
+ * heaputils.java
  * Written by Gil Tene of Azul Systems, and released to the public domain,
  * as explained at http://creativecommons.org/publicdomain/zero/1.0/
  *
@@ -7,84 +7,100 @@
  * @version 1.0.9
  */
 
-package org.HeapFragger;
+package org.heaputils;
 
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.PrintStream;
-import java.lang.management.ManagementFactory;
-import java.lang.management.MemoryMXBean;
-import java.lang.management.MemoryUsage;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.ListIterator;
+import java.lang.management.*;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicLong;
 
-// HeapFragger: A heap fragmentation inducer, meant to induce compaction of
+// heaputils: A heap fragmentation inducer, meant to induce compaction of
 // the heap on a regular basis using a limited (and settable) amount of
 // CPU and memory resources.
 //
-// The purpose of HeapFragger is [among other things] to aid application
+// The purpose of heaputils is [among other things] to aid application
 // testers in inducing inevitable-but-rare garbage collection events,
 // such that they would occur on a regular and more frequent and reliable
 // basis. Doing so allows the characterization of system behavior, such
 // as response time envelope, within practical test cycle times.
 //
-// HeapFragger works on the simple basis of repeatedly generating large sets
+// heaputils works on the simple basis of repeatedly generating large sets
 // of objects of a given size, pruning each set down to a much smaller
-// remaining live set, and increasing the object size between passes such
-// that is becomes unlikely to fit in the areas freed up by objects
-// released in a previous pass without some amount of compaction. HeapFragger
-// ages object sets before pruning them down in order to bypass potential
-// artificial early compaction by young generation collectors.
+// remaining live set after it has been promoted, and increasing the object
+// size between passes such that is becomes unlikely to fit in the areas freed
+// up by objects released in a previous pass without some amount of compaction.
+// heaputils ages object sets before pruning them down in order to bypass
+// potential artificial early compaction by young generation collectors.
 //
 // By the time enough passes are done such that aggregate space allocated
 // by the passes roughly matches the heap size (although a much smaller
 // percentage is actually alive), some level of compaction likely or
 // inevitable.
 //
-// HeapFragger's resource consumption is completely tunable, it will throttle
+// heaputils's resource consumption is completely tunable, it will throttle
 // itself to a tunable rate of allocation, and limit it's heap footprint
-// to configurable level. When run with default settings, HeapFragger will
-// occupy ~10% of the total heap space, and allocate objects at a rate
-// of 20MB/sec.
+// to configurable level. When run with default settings, heaputils will
+// occupy 10% of total heap space, and allocate objects at a rate
+// of 50MB/sec.
 //
-// Altering the heap occupancy ratio (which by default changes the number
-// of passes in a compaction-inducing iteration), and the target
-// allocation rate will change the frequency with which compactions
-// occur.The main (common) settable items are:
+// Altering the allocation rate and the peakMBPerIncrement parameter
+// (a larger peakMBPerIncrement will require fewer churning passes in each
+// compaction-inducing iteration), will change the frequency with which
+// compactions occur.The main (common) settable items are:
 //
-// allocMBsPerSec [-a, default: 20]: Allocation rate - controls the CPU %
-// HeapFragger occupies, and affects compaction event freq.
+// allocMBsPerSec [-a, default: 50]: Allocation rate - controls the CPU %
+// heaputils occupies, and affects compaction event freq.
 //
-// maxPassHeapFraction [-f, default: 0.1]: Drives the % of heap that
-// would be used by HeapFragger for it's peak live set.
-//
-// genChurnHeapFraction [-g, default: 0.1]: Controls the % of heap to be
-// churned through (just churned, near-zero being alive) between passes.
-// This should be set high enough to ensure the objects allocated in each
-// pass become "old" and get promoted before being pruned.
+// heapBudgetAsFraction [-f, default: 0.1] or
+// heapBudgetInMB [-b, default: derived from heapBudgetAsFraction] can
+// be used to controls the peak amount of heap space that the heaputils
+// will use for it's temporary churning storage needs. While the default
+// setting is to use ~10% of the detected heap size, higher heap budgets
+// can be used to allow heaputils to fragment the heap more quickly.
 //
 // heapMBtoSitOn [-s, default: 0]: Useful for experimenting with the
 // effects of varying heap occupancies on compaction times. Causes
-// HeapFragger to pre-allocate an additional static live set of the given
+// heaputils to pre-allocate an additional static live set of the given
 // size.
+//
+// pauseThresholdMs [-t, default: 350]: For convenience, heaputils includes
+// a simple pause detector that will report on detected pauses to stderr. The
+// pauseThresholdMs parameter controls the threshold below which detected
+// pauses will not be reported.
+//
+// heaputils will typically be added to existing Java applications as a
+// javaagent. E.g. a typical command line will be:
+//
+// java ... -javaagent:heaputils.jar="-a 100" MyApp myAppArgs
+//
+// The heaputils jar also includes a convenient Idle class that can be
+// used for demo purposes. E.g. the following command line will demonstrate
+// periodic promotion-failure related pauses with the HotSpot CMS collector,
+// with each resulting Full GC having to deal with at least 512MB of live
+// matter in the heap:
+//
+// java -Xmx2g -Xmx2g -XX:+UseConcMarkSweepGC -XX:+PrintGCApplicationStoppedTime
+//  -XX:+PrintGCDetails -Xloggc:gc.log -javaagent:heaputils.jar="-a 400 -s 512"
+//    org.heaputils.Idle -t 1000000000
 
 
-public class ActiveReadingHeapFragger extends Thread {
+public class HeapFragger extends Thread {
 
     static final int MB = 1024 * 1024;
 
     PrintStream log;
 
     class HeapFraggerConfiguration {
-        public long allocMBsPerSec = 20;
+        public long allocMBsPerSec = 50;
 
-        public int peakMBPerIncrement = 200;
+        public double heapBudgetAsFraction = 0.1;
+        public int heapBudgetInMB = -1;
+        public int peakMBPerIncrement;
         public int numStoreIncrements = 0; // Calculated based on estimatedHeapMB and peakMBPerIncrement
 
-        public long pruneRatio = 53;
+        public int pruneRatio = 53;
         public long pruneOpsPerSec = 2 * 1000 * 1000;
         public long shuffleOpsPerSec = 20 * 1000 * 1000;
         public long yielderMillis = 5;
@@ -101,9 +117,13 @@ public class ActiveReadingHeapFragger extends Thread {
         public long estimatedHeapMB = 0;
         public int fragStoreBucketCount = 101;
         public boolean verbose = false;
-        public int heapMBtoSitOn = 0;
+        public int heapMBtoSitOn = 100;
+
+        public boolean fullGcBetweenPasses = false;
 
         public String logFileName = null;
+
+        public long runTimeMsec = 0;
 
         void estimateHeapSize() {
             MemoryMXBean mxbean = ManagementFactory.getMemoryMXBean();
@@ -116,12 +136,16 @@ public class ActiveReadingHeapFragger extends Thread {
             for (int i = 0; i < args.length; ++i) {
                 if (args[i].equals("-v")) {
                     verbose = true;
+                } else if (args[i].equals("-g")) {
+                    fullGcBetweenPasses = true;
                 } else if (args[i].equals("-a")) {
                     allocMBsPerSec = Long.parseLong(args[++i]);
                 } else if(args[i].equals("-s")) {
                     heapMBtoSitOn = Integer.parseInt(args[++i]);
-                } else if (args[i].equals("-p")) {
-                    peakMBPerIncrement = Integer.parseInt(args[++i]);
+                } else if (args[i].equals("-b")) {
+                    heapBudgetInMB = Integer.parseInt(args[++i]);
+                } else if (args[i].equals("-f")) {
+                    heapBudgetAsFraction = Double.parseDouble(args[++i]);
                 } else if (args[i].equals("-t")) {
                     pauseThresholdMs = Long.parseLong(args[++i]);
                 } else if (args[i].equals("-i")) {
@@ -129,23 +153,30 @@ public class ActiveReadingHeapFragger extends Thread {
                 } else if (args[i].equals("-m")) {
                     fragObjectSizeMultiplier = Double.parseDouble(args[++i]);
                 } else if (args[i].equals("-r")) {
-                    pruneRatio = Long.parseLong(args[++i]);
+                    pruneRatio = Integer.parseInt(args[++i]);
                 } else if (args[i].equals("-y")) {
                     yielderMillis = Long.parseLong(args[++i]);
                 } else if (args[i].equals("-e")) {
                     estimatedHeapMB = Integer.parseInt(args[++i]);
                 } else if (args[i].equals("-o")) {
                     pruneOpsPerSec = Long.parseLong(args[++i]);
+                } else if (args[i].equals("-nap")) {
+                    runTimeMsec = Long.parseLong(args[++i]);
                 } else if (args[i].equals("-l")) {
                     logFileName = args[++i];
                 } else {
-                    System.out.println("Usage: java HeapFragger [-v] " +
-                            "[-a allocMBsPerSec] [-p peakMBPerIncrement] [-t pauseThresholdMs ] " +
-                            "[-e estimatedHeapMB] [-s heapMBtoSitOn]");
+                    System.out.println("Usage: java heaputils [-v] " +
+                            "[-a allocMBsPerSec] [-b heapBudgetInMB] [-f heapBudgetAsFraction] " +
+                            "[-t pauseThresholdMs ] [-e estimatedHeapMB] [-s heapMBtoSitOn] [-nap runTimeMsec]");
                     System.exit(1);
                 }
             }
-            numStoreIncrements = (int) (estimatedHeapMB * 1.3 / peakMBPerIncrement) + 1; // ~1.3x the pass count that would be needed
+
+            if (heapBudgetInMB == -1) {
+                heapBudgetInMB = (int)(estimatedHeapMB * heapBudgetAsFraction);
+            }
+            peakMBPerIncrement = heapBudgetInMB / 2;
+            numStoreIncrements = (int) (estimatedHeapMB * 1.5 / peakMBPerIncrement) + 1; // ~1.5x the pass count that would be needed
         }
 
         HeapFraggerConfiguration() {
@@ -153,8 +184,8 @@ public class ActiveReadingHeapFragger extends Thread {
         }
     }
 
-    private ActiveReadingHeapFragger(String[] args) throws FileNotFoundException {
-        this.setName("HeapFragger");
+    private HeapFragger(String[] args) throws FileNotFoundException {
+        this.setName("heaputils");
         config.parseArgs(args);
         if (config.logFileName != null) {
             log = new PrintStream(new FileOutputStream(config.logFileName), false);
@@ -170,13 +201,13 @@ public class ActiveReadingHeapFragger extends Thread {
     Object heapStuffRoot;
 
     class PassStore {
-        List<List<RefObject>> bucketList;
+        ArrayList<List<RefObject>> bucketList;
         AtomicLong count = new AtomicLong(0);
         AtomicLong targetBucketCount = new AtomicLong(0);
         AtomicLong targetCounts[];
 
         void reset() {
-            bucketList = (List<List<RefObject>>) Collections.synchronizedList(new ArrayList<List<RefObject>>(config.fragStoreBucketCount));
+            bucketList = new ArrayList<List<RefObject>>(config.fragStoreBucketCount);
             targetCounts = new AtomicLong[config.fragStoreBucketCount];
             for (int i = 0; i < config.fragStoreBucketCount; i++) {
                 targetCounts[i] = new AtomicLong(0);
@@ -208,7 +239,7 @@ public class ActiveReadingHeapFragger extends Thread {
                     return bucket.get(bucketTargetIndex);
                 }
             } catch (Exception e) {
-                // log.println(e);
+                log.println(e);
                 return(null);
             }
         }
@@ -234,29 +265,6 @@ public class ActiveReadingHeapFragger extends Thread {
         }
     }
 
-    class ActiveReader extends Thread {
-        final FragMaker fragMaker;
-        volatile Object tmpObject;
-
-        ActiveReader(final FragMaker fragMaker) {
-            this.fragMaker = fragMaker;
-        }
-
-        public void run() {
-            long count = 0;
-            while (true) {
-                try {
-                    tmpObject = fragMaker.getTargetObject();
-                    if (count++ % 2000000L == 0) {
-                        System.out.print("x");
-                    }
-                } catch (Exception e) {
-                    // Don't care if we sometimes get exception on access during store pahse changes
-                }
-            }
-        }
-    }
-
     class FragMaker {
         PassStore[] stores = new PassStore[config.numStoreIncrements];
         AtomicLong targetStoreCount = new AtomicLong(0);
@@ -271,12 +279,13 @@ public class ActiveReadingHeapFragger extends Thread {
         GCDetector gcDetector = new GCDetector(allocationYielder, log, config.verbose);
 
         FragMaker() {
+            initPassStores();
+        }
+
+        void initPassStores() {
             for (int i = 0; i < config.numStoreIncrements; i++) {
                 stores[i] = new PassStore();
             }
-            ActiveReader activeReader = new ActiveReader(this);
-            activeReader.setDaemon(true);
-            activeReader.start();
         }
 
         RefObject getTargetObject() {
@@ -311,9 +320,11 @@ public class ActiveReadingHeapFragger extends Thread {
             long targetObjCount = ((long) (config.peakMBPerIncrement * MB)) / fragObjectSize;
             int longArrayLength = (fragObjectSize - (config.estimatedArrayOverheadInBytes * 2))/8;
 
-            if (config.verbose)
-                log.println("\nHeapFragger: Pass Increment #" + passIncrementNumber + ": Making " +
+            if (config.verbose) {
+                log.println("\nheaputils: Pass Increment #" + passIncrementNumber +
+                        " (of 0.." + (config.numStoreIncrements - 1) + "): Making " +
                         targetObjCount + " Objects of size " + fragObjectSize);
+            }
 
             for (int i = 0; i < targetObjCount; i++) {
                 RefObject o = new RefObject(longArrayLength);
@@ -329,32 +340,52 @@ public class ActiveReadingHeapFragger extends Thread {
 
             // Wait for promotion, to get the objects created in this pass into OldGen:
             if (config.verbose) {
-                log.print("\nHeapFragger: Waiting for promotion: ");
+                log.print("\nheaputils: Waiting for promotion: ");
             }
 
             gcDetector.waitForPromotion();
 
             if (config.verbose) {
-                log.println("HeapFragger: Promotion detected.");
+                log.println("heaputils: Promotion detected.");
             }
 
             // Now that they are all old, prune the objects created in this pass by pruneRatio, keeping only
             // a fraction equal to 1/pruneRatio alive:
 
-            if (config.verbose) log.println("\nHeapFragger: Pruning frag pass by prune ratio " + config.pruneRatio);
+            if (config.verbose) {
+                log.println("\nheaputils: Pruning frag pass by prune ratio " + config.pruneRatio);
+            }
             store.prune(pruneYielder);
 
             // Shuffle target links in surviving pruned lists across all pass Stores, to keep things interesting:
 
-            if (config.verbose) log.println("\nHeapFragger: Connecting surviving links.");
+            if (config.verbose) {
+                log.println("\nheaputils: Connecting surviving links.");
+            }
             shuffleAllLinks(shuffleYielder);
         }
 
         public void frag() throws InterruptedException {
-            if (config.verbose) log.println("HeapFragger: Estimated Heap " + config.estimatedHeapMB +
-                    " MB, Starting fragger pass with " + config.numStoreIncrements + " increments.");
+            if (config.verbose) {
+                log.println("heaputils: Estimated Heap " + config.estimatedHeapMB +
+                        " MB, Starting fragger pass with " + config.numStoreIncrements + " increments.");
+            }
 
             int fragObjectSize = config.initialFragObjectSize;
+
+            initPassStores();
+            sitOnHeap.clearTargetRefs();
+            
+            if (config.fullGcBetweenPasses) {
+                // Good for demonstrating that live set actually is stable. Some collectors (Ahem. G1. Ahem)
+                // won't drop the live set without this, leading to common questions/suspicions that the allocation
+                // pattern is somehow leaking live matter. Running with fullGcBetweenPasses turned on helps put
+                // put that argument to rest. Note that this does tend to cause a full GC with its associated pauses,
+                // so don't turn this on except for when you specifically want to verify that the live set is
+                // not growing...
+                System.gc();
+            }
+
 
             for (int storeIncrementNumber = 0; storeIncrementNumber < config.numStoreIncrements; storeIncrementNumber++) {
                 // Generate a fragmented set of objects of the current size in OldGen
@@ -369,7 +400,7 @@ public class ActiveReadingHeapFragger extends Thread {
     public void run() {
         if (config.heapMBtoSitOn > 0) {
             if(config.verbose) {
-                log.println("HeapFragger: Creating " + config.heapMBtoSitOn + "MB of Heap to sit on...");
+                log.println("heaputils: Creating " + config.heapMBtoSitOn + "MB of Heap to sit on...");
             }
             heapStuffRoot = sitOnHeap.sitOnSomeHeap(config.heapMBtoSitOn, config.verbose);
         }
@@ -381,22 +412,26 @@ public class ActiveReadingHeapFragger extends Thread {
         try {
             int passNumber = 0;
             while (true) {
-                if (config.verbose) log.println("\nStarting a HeapFragger pass " + (passNumber++) + " ...");
+                if (config.verbose) {
+                    log.println("\nStarting a heaputils pass " + (passNumber++) + " ...");
+                }
                 f.frag();
             }
         } catch (InterruptedException e) {
-            log.println("HeapFragger: Interrupted, exiting...");
+            log.println("heaputils: Interrupted, exiting...");
         }
-        if (config.verbose) log.println("\nHeapFragger Done...");
+        if (config.verbose) {
+            log.println("\nheaputils Done...");
+        }
     }
 
-    public static ActiveReadingHeapFragger commonMain(String[] args) {
-        ActiveReadingHeapFragger heapFragger = null;
+    public static HeapFragger commonMain(String[] args) {
+        HeapFragger heapFragger = null;
         try {
-            heapFragger = new ActiveReadingHeapFragger(args);
+            heapFragger = new HeapFragger(args);
 
             if (heapFragger.config.verbose) {
-                heapFragger.log.print("Executing: HeapFragger");
+                heapFragger.log.print("Executing: heaputils");
                 for (String arg : args) {
                     heapFragger.log.print(" " + arg);
                 }
@@ -404,7 +439,7 @@ public class ActiveReadingHeapFragger extends Thread {
             }
             heapFragger.start();
         } catch (FileNotFoundException e) {
-            System.err.println("HeapFragger: Failed to open log file.");
+            System.err.println("heaputils: Failed to open log file.");
         }
         return heapFragger;
     }
@@ -414,17 +449,35 @@ public class ActiveReadingHeapFragger extends Thread {
         commonMain(args);
     }
 
+    private static void nap(long millis) {
+        try {
+            long startMillis = System.currentTimeMillis();
+            while (System.currentTimeMillis() - startMillis < millis) {
+                Thread.sleep(10);
+            }
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+
     public static void main(String[] args) {
-        final ActiveReadingHeapFragger heapFragger = commonMain(args);
+        final HeapFragger heapFragger = commonMain(args);
 
         if (heapFragger != null) {
-            // The HeapFragger thread, on it's own, will not keep the JVM from exiting. If nothing else
-            // is running (i.e. we we are the main class), then keep main thread from exiting
-            // until the HiccupMeter thread does...
             try {
+                if (heapFragger.config.runTimeMsec != 0) {
+                    // If configured with a limited run time, exit when it is over;
+                    nap(heapFragger.config.runTimeMsec);
+                    return;
+                }
+                // The heaputils thread, on it's own, will not keep the JVM from exiting. If nothing else
+                // is running (i.e. we we are the main class), then keep main thread from exiting
+                // until the HiccupMeter thread does...
                 heapFragger.join();
             } catch (InterruptedException e) {
-                if (heapFragger.config.verbose) heapFragger.log.println("HiccupMeter main() interrupted");
+                if (heapFragger.config.verbose) {
+                    heapFragger.log.println("heaputils main() interrupted");
+                }
             }
         }
     }
